Start on WishboneMaster of new arch

--- a/cabal.project
+++ b/cabal.project
@@ -1,5 +1,13 @@
 packages:
   clash-cores.cabal
+  ../clash-protocols/clash-protocols
+  ../clash-protocols/clash-protocols-base
+  ../clash-compiler/clash-prelude
+  ../clash-compiler/clash-prelude-hedgehog
+  ../clash-compiler/clash-lib
+  ../clash-compiler/clash-ghc
+  ../clash-compiler/tests
+
 
 package clash-cores
   ghc-options: +RTS -qn4 -A128M -RTS -j4
@@ -8,3 +16,7 @@ write-ghc-environment-files: always
 
 -- Eliminates the need for `--enable-tests`, which is needed for HLS.
 tests: true
+
+allow-newer:
+  clash-protocols:tasty
+  -- clash-tutorial:tasty
