--- a/clash-cores.cabal
+++ b/clash-cores.cabal
@@ -203,7 +203,7 @@ library
     -- Clash.Cores.Etherbone
     Clash.Cores.Etherbone.Base
     -- Clash.Cores.Etherbone.RecordBuilder
-    -- Clash.Cores.Etherbone.RecordProcessor
+    Clash.Cores.Etherbone.RecordProcessor
     Clash.Cores.Etherbone.WishboneMaster
 
 
@@ -245,6 +245,7 @@ test-suite unittests
     Test.Cores.Crc
     Test.Cores.Etherbone
     Test.Cores.Etherbone.WishboneMaster
+    Test.Cores.Etherbone.RecordProcessor
     Test.Cores.Ethernet
     Test.Cores.Ethernet.Arp.ArpManager
     Test.Cores.Ethernet.Base
